@@ -1,3 +1,5 @@
+	* fix nagle implementation in uTP
+
 	* minor uTP tweaks
 	* fix end-game mode issue when some files are selected to not be downloaded
 	* improve uTP slow start
